# Web_HW_7

./: README.md  main.py  pyproject.toml  redme.md  registration.py
database/: db.py  models.py  repository.py
migrations/: env.py
migrations/versions/: 7bfafd46e0b2_hw_tables_var3.py  89abbc759c55_hw_tables.py  9780acd8c7ba_hw_tables_var2.py  a68969dfe821_hw_tables_var2.py  cbbb62fcba1b_hw_tables_var4.py  eb78858a6074_init.py
seeds/: seed.py
